--- a/src/config.json
+++ b/src/config.json
@@ -2,9 +2,9 @@
     "model_name_mask": "bert-mask",
     "model_name_classification": "bert-classification",
     "no_cuda" : "True",
-    "classification_type":"factory",
+    "classification_type":"node",
     "max_length": 512,
-    "num_labels": 15,
+    "num_labels": 11,
     "output_dir": "./results",
     "evaluation_strategy": "epoch",
     "save_strategy": "epoch",
